refact! update the code quality